--- a/views/client.html
+++ b/views/client.html
@@ -210,7 +210,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
         center: new google.maps.LatLng(50.0641565, 36.2022325),
         mapTypeId: google.maps.MapTypeId.ROADMAP,
         mapTypeControl: false,
-        zoom: 10;
+        zoom: 10
       };
 
       // init map
