--- a/views/client.html
+++ b/views/client.html
@@ -197,7 +197,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
 
   function centerMapOnUser() {
     navigator.geolocation.getCurrentPosition(function(pos) {
-      var latlng = new google.maps.LatLnt(pos.coords.latitude, pos.coords.longitude);
+      var latlng = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
       map.setCenter(latlng);
       map.setZoom(10);
     })
