Export in a new window

--- a/views/client.html
+++ b/views/client.html
@@ -99,7 +99,7 @@
           '<p>Date: ' + dateString + '</p>',
           '<a href="' + params.fbUrl + '">Author</a>',
           '<p>',
-          '<a href="' + params.exportUrl + '">Export</a>'
+          '<a href="' + params.exportUrl + '" target = "_blank">Export</a>'
           ].join(''));
       }
     };
