REALLY NICE CODING STYLE APPLYIED

--- a/views/client.html
+++ b/views/client.html
@@ -310,7 +310,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
       </form>    
       <button class="searchButton" id ="querySearchSubmit" value="Search" onclick="applySearch()">Search</button>
       <p>
-      <button class="homeButton" onclick="centerMapOnUser()">Home</button>
+      <button class="searchButton" onclick="centerMapOnUser()">Home</button>
    </div>
 </body>
 </html>
