jquery ui lib added

--- a/views/client.html
+++ b/views/client.html
@@ -7,6 +7,7 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSIqBc9ijkkX7ve8igM8ImhqYNPlByF0o">
   </script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./mainClient.css">
 
