--- a/views/client.html
+++ b/views/client.html
@@ -8,6 +8,7 @@
   </script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
   <link rel="stylesheet" type="text/css" href="./mainClient.css">
 
