expanding non important fields in the form by button click

--- a/views/client.html
+++ b/views/client.html
@@ -257,6 +257,17 @@ function putMarkers(map, markers, roadpolizeiAPI){
       $( "#fixationTimeStart" ).datepicker();
       $("#fixationTimeEnd").datepicker();
     });
+
+    $('#expandButton').click(function() {
+        $('#hiddenInputs').toggle('slow', 'swing', function(){
+            var btn = $('#expandButton');
+            if (btn.text() === '+') {
+                btn.text('-');
+            } else {
+                btn.text('+');
+            }
+        });
+    });
   });
 
   function generateURL(){
@@ -303,20 +314,23 @@ function putMarkers(map, markers, roadpolizeiAPI){
       <form name = "querySearchForm" method="get" action="/api/reports/search" enctype="multipart/form-data">
         <input type="text" placeholder="Car number" name="carNumber" id="carNumber">
         <p>
-        <input type="text" placeholder="Description" name="description" id="description">
-        <p>
         <div>
           <input type="text" placeholder="Latitude" name="lat" id="lat">
           <input type="text" placeholder="Longitude" name="lng" id="lng">
           <input type="text"placeholder="Radius" name="rad" id="rad">
         </div>
-        <p>
-        Start <input type="text" placeholder="Fixation start time" name="fixationTimeStart" id="fixationTimeStart">
-        <p>
-        End <input type="text" placeholder="Fixation end time" name="fixationTimeEnd" id="fixationTimeEnd"> 
-        <p>
-        <input type="text" placeholder="FacebookID"name="facebookID" id="facebookID">                 
-      </form>    
+        <div class="hiddenInputs" id="hiddenInputs">
+          <input type="text" placeholder="Description" name="description" id="description">
+          <p>
+          Start <input type="text" placeholder="Fixation start time" name="fixationTimeStart" id="fixationTimeStart">
+          <p>
+          End <input type="text" placeholder="Fixation end time" name="fixationTimeEnd" id="fixationTimeEnd"> 
+          <p>
+          <input type="text" placeholder="FacebookID"name="facebookID" id="facebookID">
+        </div>              
+      </form>
+      <button class="searchButton" id="expandButton">+</button>
+      <p>
       <button class="searchButton" id ="querySearchSubmit" value="Search" onclick="applySearch()">Search</button>
       <p>
       <button class="searchButton" onclick="centerMapOnUser()">Home</button>
